2006-04-06  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse.desktop.in: Move launcher to Accessories
    
2006-04-05  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-import.c:
    * libseahorse/seahorse-signatures.c: Fix notifications to use new 
    graphics.
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-pgp-public-key-properties.glade: Put event boxes back
    around photo ids so that scrolling works.

2006-04-03  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c:
    * src/seahorse-key-manager.c: Remove unnecessary rendering of pixbufs
    for about dialogs.
    *plugins/applet/seahorse-applet.c: Make the help file display.

2006-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * pixmaps/Makefile.am:
    * pixmaps/seahorse.png (removed):
    * pixmaps/22x22/Makefile.am:
    * pixmaps/22x22/seahorse-preferences.png (added):
    * pixmaps/22x22/seahorse-preferences.svg (added):
    * pixmaps/22x22/seahorse.png (added):
    * pixmaps/22x22/seahorse.svg (added):
    * pixmaps/48x48/Makefile.am:
    * pixmaps/48x48/seahorse-preferences.png (added):
    * pixmaps/48x48/seahorse-preferences.svg (added):
    * pixmaps/scaleable/Makefile.am:
    * pixmaps/scaleable/seahorse-preferences.png (added):
    * pixmaps/scaleable/seahorse.png:
    * plugins/applet/GNOME_SeahorseApplet.server.in.in:
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in: New icons for seahorse and seahorse-preferences
    Fixes Bug #336661
    
2006-04-03  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpgmex-op.c:
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-key-properties.c:
    * libseahorse/seahorse-pgp-public-key-properties.glade: Make