@@ -2027,11 +2027,12 @@
 				      </child>
 
 				      <child>
-					<widget class="GtkButton" id="button11">
+					<widget class="GtkButton" id="details_expires_button">
 					  <property name="visible">True</property>
 					  <property name="can_focus">True</property>
 					  <property name="relief">GTK_RELIEF_NORMAL</property>
 					  <property name="focus_on_click">True</property>
+					  <signal name="clicked" handler="on_details_calendar1_button_clicked" last_modification_time="Wed, 05 Apr 2006 18:26:36 GMT"/>
 
 					  <child>
 					    <widget class="GtkImage" id="image49">
@@ -2484,7 +2485,7 @@ Ultimate</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
-			      <signal name="clicked" handler="on_details_date_button_clicked" last_modification_time="Mon, 19 Sep 2005 17:52:34 GMT"/>
+			      <signal name="clicked" handler="on_details_calendar2_button_clicked" last_modification_time="Wed, 05 Apr 2006 18:26:57 GMT"/>
 
 			      <child>
 				<widget class="GtkAlignment" id="alignment18">
