@@ -1,4 +1,10 @@
-2006-04-06  Adam Schreiber  <sadam@clemson.edu>
+2006-04-06  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-key-properties.c:
+    * src/seahorse-pgp-private-key-properties.c: Fix regression with 
+    expire date dialog. Patch from Jim Pharis. Bug #325239
+    
+2006-04-06  Nate Nielsen  <nielsen@memberwebs.com>
 
     * src/seahorse.desktop.in: Move launcher to Accessories
     
